--- a/index.html
+++ b/index.html
@@ -5,9 +5,61 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  <title>Document</title>
+  <title>Rove | Landing page</title>
 </head>
 <body>
-  
+  <div class="loader">
+    <div class="loader-clip clip-top">
+      <div class="marquee">
+        <div class="marquee-container">
+          <span>Rove</span>
+          <span>Rove</span>
+          Rove
+          <span>Rove</span>
+          <span>Rove</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="loader-clip clip-bottom">
+      <div class="marquee">
+        <div class="marquee-container">
+          <span>Rove</span>
+          <span>Rove</span>
+          Rove
+          <span>Rove</span>
+          <span>Rove</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="clip-center">
+      <div class="marquee">
+        <div class="marquee-container">
+          <span>Rove</span>
+          <span>Rove</span>
+          Rove
+          <span>Rove</span>
+          <span>Rove</span>
+        </div>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="nav">
+        <div class="logo">Brand</div>
+        <div class="nav-items">
+          <a href="#">Design</a>
+          <a href="#">Merch</a>
+          <a href="#">Info</a>
+        </div>
+      </div>
+      <div class="footer">
+        <p>Play film</p>
+        <p>High quality video production <br />Made in Iceland</p>
+        <p>Rove 2022</p>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
